task1/test_results_no_defects/infer_test/null_pointer/report.txt
#0
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/null_pointer.c:258: error: Null Dereference
  pointer `null_pointer_015_gbl_ptr` last assigned on line 257 could be null and is dereferenced by call to `strcpy()` at line 258, column 2.
  256. 	char *str = "This is a string";
  257. 	null_pointer_015_func_001(strlen(str));
  258. 	strcpy(null_pointer_015_gbl_ptr,str);  /*Tool should not detect this line as error*/ /*NO ERROR:NULL pointer dereference*/
        ^
  259. 	free(null_pointer_015_gbl_ptr);
  260. 	null_pointer_015_gbl_ptr = NULL;

#1
/home/cs4239/Desktop/cs5218/Benchmarks/02.wo_Defects/null_pointer.c:284: error: Null Dereference
  pointer `null_pointer_016_gbl_doubleptr` last assigned on line 280 could be null and is dereferenced at line 284, column 3.
  282. 	for(i=0;i<10;i++)
  283. 	{
  284. 		null_pointer_016_gbl_doubleptr[i]=(long*) malloc(10*sizeof(long));
         ^
  285. 	}
  286. 	for(i=0;i<10;i++)

Found 2 issues
          Issue Type(ISSUED_TYPE_ID): #
  Null Dereference(NULL_DEREFERENCE): 2
